--- a/css/demo.css
+++ b/css/demo.css
@@ -7,3 +7,4 @@ body {padding:50px;font-family:arial}
 h1 {font-size:20px;font-weight:bold;margin-bottom:20px}
 a {color:#666}
 a:hover {color:#000}
+.separador {overflow:hidden;height:25px;margin-bottom:25px;border-bottom:1px solid #999}
