--- a/css/demo.css
+++ b/css/demo.css
@@ -3,8 +3,16 @@
 .clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0px}.clearfix{display:inline-block}* html .clearfix{height:1%}.clearfix{display:block}
 /**************************/
 
-body {padding:50px;font-family:arial}
-h1 {font-size:20px;font-weight:bold;margin-bottom:20px}
+body {padding:50px;font-family:verdana;background-color:#ebebeb}
+h1,h2 {font-family:'Trebuchet MS';font-weight:bold}
+h1 {font-size:22px;margin-bottom:20px}
+h2 {font-size:18px;margin-bottom:10px}
 a {color:#666}
 a:hover {color:#000}
-.separador {overflow:hidden;height:25px;margin-bottom:25px;border-bottom:1px solid #999}
+p {margin-bottom:10px}
+label{cursor:pointer;font-size:14px}
+strong{font-weight:bold}
+.separator {overflow:hidden;height:25px;margin-bottom:25px;border-bottom:1px solid #999}
+#submit {margin:0}
+#submit input {padding:5px 15px;border:2px solid grey;font-size:14px;cursor:pointer;background-color:#ccc;color:#333;font-weight:bold}
+#form {background-color:#fff;border:3px solid #ccc;padding:20px;margin-bottom:15px}
